--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <div id="hodnotenieContainer">
                     <div class="samotneHodnotenie">
                         <div class="quoteSign">&#8220;</div>
-                        <div>
+                        <div class="quoteHodnotenie">
                             <blockquote>
                                 Veľmi príjemné ubytovanie, čisto, útulne, pohodlne. Všade blízko či do mesta, alebo k verejnej doprave ( vlak, autobus).
                                 Ideálny východiskový bod do okolia.
@@ -216,7 +216,7 @@
                     </div>
                     <div class="samotneHodnotenie">
                         <div class="quoteSign">&#8220;</div>
-                        <div>
+                        <div class="quoteHodnotenie">
                             <blockquote>
                                 Ochota a ústretovosť personálu, čistota, vybavenie, ubytovanie blízko železničnej stanice aj centra mesta. Určite využijeme
                                 v prípade potreby znovu.
@@ -226,7 +226,7 @@
                     </div>
                     <div class="samotneHodnotenie">
                         <div class="quoteSign">&#8220;</div>
-                        <div>
+                        <div class="quoteHodnotenie">
                             <blockquote>
                                 Prístup personálu bol veľmi profesionálny. Cítili sme sa veľmi dobre. Všetky spotrebiče boli fungujúce, vybavená kuchyňa,
                                 Wi-Fi signál, čistota priestorov, komfort a poloha. Navyše lokalita v centre mesta Humenné
@@ -237,7 +237,7 @@
                     </div>
                     <div class="samotneHodnotenie">
                         <div class="quoteSign">&#8220;</div>
-                        <div>
+                        <div class="quoteHodnotenie">
                             <blockquote>
                                 Pán ubytovateľ bol veľmi milý, flexibilný človek. Keď nás videl, že si nesieme spoločenský odev,opýtal sa nás na akú udalosť
                                 ideme a po našej odpovedi, že na svadbu, nám okamžite sám navrhol, že si môžeme dlhšie pospať
