--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
                 <p class="sectionHeading">Galéria</p>
 
                 <!-- OBRAZKY SA NACITAJU POMOCOU JAVASCRIPTU -->
-                <div id="galeriaContainer"></div>
+                <div id="galeriaContainer">
+                   
+                </div>
 
                 <button id="morePhotosButton">VIAC FOTIEK</button>
             </div>
