--- a/index.html
+++ b/index.html
@@ -190,10 +190,11 @@
         <section id="galeria">
             <div class="sectionContainer">
                 <p class="sectionHeading">Galéria</p>
-
                 <!-- OBRAZKY SA NACITAJU POMOCOU JAVASCRIPTU -->
                 <div id="galeriaContainer">
-                   
+                   <div id="galeriaSubContainer1" class="glaeriaSubContainer">
+
+                   </div>
                 </div>
 
                 <button id="morePhotosButton">VIAC FOTIEK</button>
@@ -328,7 +329,7 @@
             });
         }
     </script>
-    
+
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSeWcGwiJhXeoDuS8S1PQVXCHnlGbyAIs&callback=initMap">
     </script>
     <script src="main.js"></script>
