--- a/index.html
+++ b/index.html
@@ -192,12 +192,26 @@
                 <p class="sectionHeading">Galéria</p>
                 <!-- OBRAZKY SA NACITAJU POMOCOU JAVASCRIPTU -->
                 <div id="galeriaContainer">
-                   <div id="galeriaSubContainer1" class="glaeriaSubContainer">
-
+                   <div id="galeriaRow">
+                        <div class="galeriaColumn">
+                            <img src="images/photos/apartmany2.jpg" alt="apartmany 2">
+                            <img src="images/photos/apartmany18.jpg" alt="apartmany 18">
+                        </div>
+                        <div class="galeriaColumn">
+                            <img src="images/photos/apartmany15.jpg" alt="apartmany 15">
+                            <img src="images/photos/apartmany1.jpg" alt="apartmany 1">
+                        </div>
+                        <div class="galeriaColumn">
+                            <img src="images/photos/apartmany10.jpg" alt="apartmany 10">
+                            <img src="images/photos/apartmany21.jpg" alt="apartmany 21">
+                        </div>
+                        <div class="galeriaColumn">
+                            <img src="images/photos/apartmany16.jpg" alt="apartmany 16">
+                            <img src="images/photos/apartmany11.jpg" alt="apartmany 11">
+                        </div>
                    </div>
                 </div>
 
-                <button id="morePhotosButton">VIAC FOTIEK</button>
             </div>
 
         </section>
