--- a/index.html
+++ b/index.html
@@ -194,20 +194,20 @@
                 <div id="galeriaContainer">
                    <div id="galeriaRow">
                         <div class="galeriaColumn">
-                            <img src="images/photos/apartmany2.jpg" alt="apartmany 2">
-                            <img src="images/photos/apartmany18.jpg" alt="apartmany 18">
+                            <img class="photo" src="images/photos/apartmany2.jpg" alt="apartmany 2">
+                            <img class="photo" src="images/photos/apartmany18.jpg" alt="apartmany 18">
                         </div>
                         <div class="galeriaColumn">
-                            <img src="images/photos/apartmany15.jpg" alt="apartmany 15">
-                            <img src="images/photos/apartmany1.jpg" alt="apartmany 1">
+                            <img class="photo" src="images/photos/apartmany15.jpg" alt="apartmany 15">
+                            <img class="photo" src="images/photos/apartmany1.jpg" alt="apartmany 1">
                         </div>
                         <div class="galeriaColumn">
-                            <img src="images/photos/apartmany10.jpg" alt="apartmany 10">
-                            <img src="images/photos/apartmany21.jpg" alt="apartmany 21">
+                            <img class="photo" src="images/photos/apartmany10.jpg" alt="apartmany 10">
+                            <img class="photo" src="images/photos/apartmany21.jpg" alt="apartmany 21">
                         </div>
                         <div class="galeriaColumn">
-                            <img src="images/photos/apartmany16.jpg" alt="apartmany 16">
-                            <img src="images/photos/apartmany11.jpg" alt="apartmany 11">
+                            <img class="photo" src="images/photos/apartmany16.jpg" alt="apartmany 16">
+                            <img class="photo" src="images/photos/apartmany11.jpg" alt="apartmany 11">
                         </div>
                    </div>
                 </div>
@@ -280,10 +280,11 @@
                             <br> 066 01 Humenné
                         </p>
                         <p id="odkazNaMapy">
-                            <a target="blank" href="https://www.google.com/maps/place/Kukorelliho+1503%2F42,+066+01+Humenn%C3%A9,+Slovensko/@48.9330288,21.9066823,17.25z/data=!4m15!1m9!4m8!1m0!1m6!1m2!1s0x473eb5048a46eea1:0x60a59f40ed4d6d2d!2sKukorelliho+1503%2F42,+066+01+Humenn%C3%A9,+Slovensko!2m2!1d21.9078463!2d48.9334797!3m4!1s0x473eb5048a46eea1:0x60a59f40ed4d6d2d!8m2!3d48.9334797!4d21.9078463?hl=cs">Pozri v Google mapách</a>
+                            <a target="blank" href="https://www.google.com/maps/@48.9335587,21.9078758,17z">Pozri v Google mapách</a>
                         </p>
                     </div>
                     <div id="kontaktFormular" class="adressItem">
+                        <p class="bold">REZERVÁCIE:</p>
                         <p>MOBIL:
                             <span class="bold">+421 918 405 730</span>
                         </p>
