--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div id="galeriaContainer">
                    <div id="galeriaRow">
                         <div class="galeriaColumn">
-                            <img class="photo" src="images/photos/apartmany2.jpg" alt="apartmany 2">
+                            <img class="photo" src="images/photos/apartmany2.jpg" alt="apartmany 2" id="photo1">
                             <img class="photo" src="images/photos/apartmany18.jpg" alt="apartmany 18">
                         </div>
                         <div class="galeriaColumn">
