--- a/index.html
+++ b/index.html
@@ -327,6 +327,34 @@
         </div>
     </footer>
 
+
+    <!-- <div id="helpLoadImageContainer">
+        <img class="photo_1" src="images/photos/apartmany1.jpg" alt="apartmany 1">
+        <img class="photo_2" src="images/photos/apartmany2.jpg" alt="apartmany 2">
+        <img class="photo_3" src="images/photos/apartmany3.jpg" alt="apartmany 3">
+        <img class="photo_4" src="images/photos/apartmany4.jpg" alt="apartmany 4">
+        <img class="photo_5" src="images/photos/apartmany5.jpg" alt="apartmany 5">
+        <img class="photo_6" src="images/photos/apartmany6.jpg" alt="apartmany 6">
+        <img class="photo_7" src="images/photos/apartmany7.jpg" alt="apartmany 7">
+        <img class="photo_8" src="images/photos/apartmany8.jpg" alt="apartmany 8">
+        <img class="photo_9" src="images/photos/apartmany9.jpg" alt="apartmany 9">
+        <img class="photo_10" src="images/photos/apartmany10.jpg" alt="apartmany 10">
+        <img class="photo_11" src="images/photos/apartmany11.jpg" alt="apartmany 11">
+        <img class="photo_12" src="images/photos/apartmany12.jpg" alt="apartmany 12">
+        <img class="photo_13" src="images/photos/apartmany13.jpg" alt="apartmany 13">
+        <img class="photo_14" src="images/photos/apartmany14.jpg" alt="apartmany 14">
+        <img class="photo_15" src="images/photos/apartmany15.jpg" alt="apartmany 15">
+        <img class="photo_16" src="images/photos/apartmany16.jpg" alt="apartmany 16">
+        <img class="photo_17" src="images/photos/apartmany17.jpg" alt="apartmany 17">
+        <img class="photo_18" src="images/photos/apartmany18.jpg" alt="apartmany 18">
+        <img class="photo_19" src="images/photos/apartmany19.jpg" alt="apartmany 19">
+        <img class="photo_20" src="images/photos/apartmany20.jpg" alt="apartmany 20">
+        <img class="photo_21" src="images/photos/apartmany21.jpg" alt="apartmany 21">
+        <img class="photo_22" src="images/photos/apartmany22.jpg" alt="apartmany 22">
+        <img class="photo_23" src="images/photos/apartmany23.jpg" alt="apartmany 23">
+    </div> -->
+
+
     <!-- GOOGLE MAPS -->
     <script>
         function initMap() {
