--- a/index.html
+++ b/index.html
@@ -194,20 +194,20 @@
                 <div id="galeriaContainer">
                    <div id="galeriaRow">
                         <div class="galeriaColumn">
-                            <img class="photo" src="images/photos/apartmany2.jpg" alt="apartmany 2" id="photo1">
-                            <img class="photo" src="images/photos/apartmany18.jpg" alt="apartmany 18">
+                            <img class="photo" src="images/photos/apartmany2.jpg" alt="apartmany 2" id="photo_2">
+                            <img class="photo" src="images/photos/apartmany18.jpg" alt="apartmany 18" id="photo_18">
                         </div>
                         <div class="galeriaColumn">
-                            <img class="photo" src="images/photos/apartmany15.jpg" alt="apartmany 15">
-                            <img class="photo" src="images/photos/apartmany1.jpg" alt="apartmany 1">
+                            <img class="photo" src="images/photos/apartmany15.jpg" alt="apartmany 15" id="photo_15">
+                            <img class="photo" src="images/photos/apartmany1.jpg" alt="apartmany 1" id="photo_1">
                         </div>
                         <div class="galeriaColumn">
-                            <img class="photo" src="images/photos/apartmany10.jpg" alt="apartmany 10">
-                            <img class="photo" src="images/photos/apartmany21.jpg" alt="apartmany 21">
+                            <img class="photo" src="images/photos/apartmany10.jpg" alt="apartmany 10" id="photo_10">
+                            <img class="photo" src="images/photos/apartmany21.jpg" alt="apartmany 21" id="photo_21">
                         </div>
                         <div class="galeriaColumn">
-                            <img class="photo" src="images/photos/apartmany16.jpg" alt="apartmany 16">
-                            <img class="photo" src="images/photos/apartmany11.jpg" alt="apartmany 11">
+                            <img class="photo" src="images/photos/apartmany16.jpg" alt="apartmany 16" id="photo_16">
+                            <img class="photo" src="images/photos/apartmany11.jpg" alt="apartmany 11" id="photo_11">
                         </div>
                    </div>
                 </div>
