--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
         <div id="actualPhoto"></div>
         <div id="galleryNav">
-            <div id="galleryNavLeft" class="galleryNavigation">&lt;</div>
-            <div id="galleryNavRight" class="galleryNavigation">&gt;</div>
+            <div id="galleryNavLeft" class="galleryNavigation"><span>&lt;</span></div>
+            <div id="galleryNavRight" class="galleryNavigation"><span>&gt;</span></div>
         </div>
     </div>
 
