--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <p class="sectionHeading">Kontakt</p>
                 <div id="kontaktContainer">
                     <div id="kontaktAdresa" class="adressItem">
-                        <p class="bold">ADRESA:</p>
+                        <p class="bold adressItemHead">ADRESA:</p>
                         <p id="actualAdress">
                             Apartmány Humenné
                             <br> Kukorelliho 1503/42
@@ -284,7 +284,7 @@
                         </p>
                     </div>
                     <div id="kontaktFormular" class="adressItem">
-                        <p class="bold">REZERVÁCIE:</p>
+                        <p class="bold adressItemHead">REZERVÁCIE:</p>
                         <p>MOBIL:
                             <span class="bold">+421 918 405 730</span>
                         </p>
