--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
                     <br> Každý apartmán disponuje vlastnou kúpeľňou (sprchový kút / vaňa), WiFi pripojením, TV, plne vybavenou
                     kuchyňou a je zariadený s dôrazom na pohodlie a kvalitný odpočinok.
                 </p>
+                <div id="iconContainer">
+                    <img src="images/icons/iconWiFi.png" alt="WiFi icon">
+                    <img src="images/icons/iconBed.png" alt="bed icon">
+                    <img src="images/icons/iconTV.png" alt="tv icon">
+                    <img src="images/icons/iconBath.png" alt="bath icon">
+                    <img src="images/icons/iconFridge.png" alt="fridge icon">
+                </div>
 
             </div>
         </section>
@@ -190,6 +197,7 @@
         <section id="galeria">
             <div class="sectionContainer">
                 <p class="sectionHeading">Galéria</p>
+                <p id="galeriaHelpText">Po kliknutí na fotku sa zobrazí celá galéria.</p>
                 <!-- OBRAZKY SA NACITAJU POMOCOU JAVASCRIPTU -->
                 <div id="galeriaContainer">
                    <div id="galeriaRow">
@@ -210,10 +218,8 @@
                             <img class="photo" src="images/photos/apartmany11.jpg" alt="apartmany 11" id="photo_11">
                         </div>
                    </div>
-                </div>
-
+                </div>             
             </div>
-
         </section>
 
         <!-- HODNOTENIE ZAKAZNIKOV -->
@@ -256,7 +262,7 @@
                         <div class="quoteSign">&#8220;</div>
                         <div class="quoteHodnotenie">
                             <blockquote>
-                                Pán ubytovateľ bol veľmi milý, flexibilný človek. Keď nás videl, že si nesieme spoločenský odev,opýtal sa nás na akú udalosť
+                                Pán ubytovateľ bol veľmi milý, flexibilný človek. Keď nás videl, že si nesieme spoločenský odev, opýtal sa nás na akú udalosť
                                 ideme a po našej odpovedi, že na svadbu, nám okamžite sám navrhol, že si môžeme dlhšie pospať
                                 a neskôr sa odubytovať.
                             </blockquote>
