--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- LANDING PAGE -->
     <header id="mainHeader">
         <div id="landingContainer">
-            <p id="heading">Apartmány Humenné </p>
+            <h1 id="heading">Apartmány Humenné </h1>
             <p id="subHeading">
                 Najobľúbenejšie ubytovanie,
                 <br> priamo v centre mesta
@@ -198,7 +198,6 @@
             <div class="sectionContainer">
                 <p class="sectionHeading">Galéria</p>
                 <p id="galeriaHelpText">Po kliknutí na fotku sa zobrazí celá galéria.</p>
-                <!-- OBRAZKY SA NACITAJU POMOCOU JAVASCRIPTU -->
                 <div id="galeriaContainer">
                    <div id="galeriaRow">
                         <div class="galeriaColumn">
