--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                     kuchyňou a je zariadený s dôrazom na pohodlie a kvalitný odpočinok.
                 </p>
                 <div id="iconContainer">
-                    <img src="images/icons/iconWiFi.png" alt="WiFi icon">
-                    <img src="images/icons/iconBed.png" alt="bed icon">
-                    <img src="images/icons/iconTV.png" alt="tv icon">
-                    <img src="images/icons/iconBath.png" alt="bath icon">
-                    <img src="images/icons/iconFridge.png" alt="fridge icon">
+                    <img src="images/icons/iconWiFi.png" alt="WiFi ikona">
+                    <img src="images/icons/iconBed.png" alt="posteľ ikona">
+                    <img src="images/icons/iconTV.png" alt="tv ikona">
+                    <img src="images/icons/iconBath.png" alt="kúpeľňa ikona">
+                    <img src="images/icons/iconFridge.png" alt="chladnička ikona">
                 </div>
 
             </div>
@@ -202,20 +202,20 @@
                 <div id="galeriaContainer">
                    <div id="galeriaRow">
                         <div class="galeriaColumn">
-                            <img class="photo" src="images/photos-small/apartmany2-small.jpg" alt="fotka-apartmany-2" id="photo_2">
-                            <img class="photo" src="images/photos-small/apartmany18-small.jpg" alt="fotka-apartmany-18" id="photo_18">
+                            <img class="photo" src="images/photos-small/apartmany-humenne-2-small.jpg" alt="fotka-apartmany-humenné-2" id="photo_2">
+                            <img class="photo" src="images/photos-small/apartmany-humenne-18-small.jpg" alt="fotka-apartmany-humenné-18" id="photo_18">
                         </div>
                         <div class="galeriaColumn">
-                            <img class="photo" src="images/photos-small/apartmany15-small.jpg" alt="fotka-apartmany-15" id="photo_15">
-                            <img class="photo" src="images/photos-small/apartmany1-small.jpg" alt="fotka-apartmany-1" id="photo_1">
+                            <img class="photo" src="images/photos-small/apartmany-humenne-15-small.jpg" alt="fotka-apartmany-humenné-15" id="photo_15">
+                            <img class="photo" src="images/photos-small/apartmany-humenne-1-small.jpg" alt="fotka-apartmany-humenné-1" id="photo_1">
                         </div>
                         <div class="galeriaColumn">
-                            <img class="photo" src="images/photos-small/apartmany10-small.jpg" alt="fotka-apartmany-10" id="photo_10">
-                            <img class="photo" src="images/photos-small/apartmany16-small.jpg" alt="fotka-apartmany-16" id="photo_16">
+                            <img class="photo" src="images/photos-small/apartmany-humenne-10-small.jpg" alt="fotka-apartmany-humenné-10" id="photo_10">
+                            <img class="photo" src="images/photos-small/apartmany-humenne-16-small.jpg" alt="fotka-apartmany-humenné-16" id="photo_16">
                         </div>
                         <div class="galeriaColumn">
-                            <img class="photo" src="images/photos-small/apartmany21-small.jpg" alt="fotka-apartmany-21" id="photo_21">
-                            <img class="photo" src="images/photos-small/apartmany11-small.jpg" alt="fotka-apartmany-11" id="photo_11">
+                            <img class="photo" src="images/photos-small/apartmany-humenne-21-small.jpg" alt="fotka-apartmany-humenné-21" id="photo_21">
+                            <img class="photo" src="images/photos-small/apartmany-humenne-11-small.jpg" alt="fotka-apartmany-humenné-11" id="photo_11">
                         </div>
                    </div>
                 </div>             
