--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Apartmány Humenné - Dostupné ubytovanie v centre mesta</title>
-    <meta name="description" content="Kvalitné a cenovo dostupné ubytovanie v nových apartmánoch v centre mesta.">
+    <meta name="description" content="Kvalitné a cenovo dostupné ubytovanie v nových, plne vybavených apartmánoch v centre Humenného.">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
 </head>
