--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Apartmány Humenné - Dostupné ubytovanie v centre mesta</title>
+    <title>Apartmány Humenné - Kvalitné ubytovanie v centre mesta</title>
     <meta name="description" content="Kvalitné a cenovo dostupné ubytovanie v nových, plne vybavených apartmánoch v centre Humenného.">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link rel="icon" type="image/png" href="favicon16.png" sizes="16x16">  
+    <link rel="icon" type="image/png" href="favicon32.png" sizes="32x32">  
+    <link rel="icon" type="image/png" href="favicon96.png" sizes="96x96">  
 </head>
 
 <body>
